fix audio in